# hseproject

./: .gitignore  .gitmodules  CoreComponent.yml  LICENSE.md  README.md  SocialComponent.yml  comments_FINAL.md  docker-compose.yml  nbiryulin_application.md  nbiryulin_application_NEW.md  nbiryulin_user_scripts.md  nbiryulin_user_scripts_FINAL.md  nginx.conf  НА_Бирюлин_final_code.md  НАБирюлин_code_2.md
PROJECT/corecomp/: main.py
PROJECT/corecomp/router/: rec.py
PROJECT/corecomp/utils/: db.py
PROJECT/docs/: SocialComponent.yml
PROJECT/examples/: generate_videos.py  ss.py
PROJECT/front/: main.py  utils.py
PROJECT/front/templates/: main.html  pending.html  result.html
PROJECT/socialcomp/: Pipfile  utils.py
PROJECT/socialcomp/parsers/: ok.py  vk.py
PROJECT/telbot/: Dockerfile  base.go  utils.go
PROJECT/videocomp/: Pipfile  main.py
core/api/: api.pb.go  api.proto
corecomp/: Dockerfile  Pipfile  build.gradle  log.txt  main.py  pyproject.toml  req.txt  settings.gradle
corecomp/addface/: routing.py  structs.py
corecomp/gradle/wrapper/: gradle-wrapper.properties
corecomp/recface/: routing.py  structs.py
corecomp/router/: add.py  rec.py
corecomp/social/: routing.py  structs.py
corecomp/src/main/java/com/facerec/corecomp/: CorecompApplication.java
corecomp/src/test/java/com/facerec/corecomp/: CorecompApplicationTests.java
corecomp/utils/: data.py  db.py  mongodb.py  rabbitmq.py  redis.py  structs.py  utils.py
docs/: CoreComponent.yml  VideoComponent.yml
examples/: parse_vk.py
front/: Dockerfile  Pipfile  downloader.py  main.py  utils.py
front/templates/: error.html  main.html  pending.html  result.html
socialcomp/: Dockerfile  Pipfile  main.py  pyproject.toml
socialcomp/parsers/: utils.py  vk.py
telbot/: go.mod  main.go  utils.go
videocomp/: Dockerfile  main.py  utils.py
