[tool.poetry]
name = "corecomp"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.58.1"
asyncpg = "^0.20.1"
face_recognition = "^1.3.0"
ujson = "^3.0.0"
uvicorn = "^0.11.5"
loguru = "^0.5.1"

[tool.poetry.dev-dependencies]
pylint = "^2.5.3"
autopep8 = "^1.5.3"
mypy = "^0.782"
rope = "^0.17.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
