[tool.poetry]
name = "socialcomp"
version = "0.1.0"
description = ""
authors = ["keddad <keddad@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.59.0"
pydantic = "^1.5.1"
uvicorn = "^0.11.5"
aiohttp = {extras = ["speedups"], version = "^3.6.2"}
ujson = "^3.0.0"

[tool.poetry.dev-dependencies]
pylint = "^2.5.3"
autopep8 = "^1.5.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
